--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "^18.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.2",
     "typescript": "3.2.1",
     "web-vitals": "^2.1.4"
   },
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build --openssl-legacy-provider",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
